<resources>
    <string name="app_name">credit-debt</string>
    <string name="textview">TextView</string>
    <string name="debt">Debt</string>
    <string name="creditdebtaddbutt">CreditDebtAddButt</string>
    <string name="change">Change</string>
    <string name="title_activity_add_debit_cred">AddDebitCred</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="credit_debt">Credit/Debt</string>
    <string name="back">Back</string>
    <string name="add">Add</string>
    <string name="phone">Phone</string>
    <string name="crediti_debiti_presenti">crediti/debiti presenti</string>
    <string name="remove">remove</string>
    <string name="removebutt">removebutt</string>
    <string name="change_results">change results</string>
    <string name="value">Value</string>
    <string name="element_text" />
    <string name="channel_name">fuffa</string>
    <string name="channel_description">fuffa2</string>
    <string name="credit">Credit</string>
</resources>